syntax = "proto3";

package user;


service User{
  rpc SMSCode( Phone ) returns ( Code ) {}
  rpc EmailCode( Email ) returns ( Code ) {}
  rpc Register( RegisterInfo ) returns (UserInfo){}
  rpc Login( LoginInfo ) returns (UserInfo){} 
  rpc Logout( Token ) returns (Status){}
  rpc Auth( Token ) returns (UserInfo){}
  rpc Info( UserID  ) returns (UserInfo){}
  rpc List( UserQuery ) returns (UsersInfo) {}
}

message Phone {
    string country = 1;
    string phone = 2;
}

message  Email {
    string email = 1;
}

message Code {
    string code = 1;
}

message UserID {
  string userID = 1;
}

message Status {
  bool success = 1;
}

message Token {
  string token = 1;
}

message LoginInfo {
  string account = 1;
  string password = 2;
}

message RegisterInfo {
  string account = 1;
  string password = 2;
  string passwordConfirm = 3;
  string nickname = 4;
}

message UserQuery {
    int32 num = 1;
    int32 size = 2;
    string search = 3;
    repeated string IDs = 4;
}

message UserInfo {
  string userID = 1;
  string phone = 2;
  string email = 3;
  string nickname = 4; 
  string token = 5;
  string avatar = 6;
  int64 level = 7;
  int64 followNum = 8;
  int64 popularity = 9;
  int64 createdAt = 10;
}

message UsersInfo {
    repeated UserInfo users = 1;
    int64 totalNum = 2;
}
